# sift

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  sift.db
api/: deps.py  main.py
api/routes/: auth.py  webhook.py
config/: settings.py  sources.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 163b3ad3d39a_initial.py
delivery/: email.py
delivery/templates/: digest.html
docs/: launch-checklist.md
ingestion/: base.py  hn.py  og_image.py  reddit.py  rss.py  twitter.py  youtube.py
scoring/: llm.py  ranker.py
scripts/: deliver.py  ingest.py  migrate_interests.py  retag.py  score.py
tests/: test_dedup.py  test_ranker.py  test_scoring.py  test_sources.py
web/: routes.py
web/static/: style.css
web/templates/: base.html  feed.html  landing.html  settings.html
